[project]
name = "gazelle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "huggingface-hub==1.1.4",
    "jinja2==3.1.6",
    "matplotlib>=3.10.7",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "timm==1.0.22",
    "tqdm==4.67.1",
    "typer-slim==0.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
