[project]
name = "gazelle"
version = "0.0.1"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch==2.4.1",
  "torchvision==0.19.1",
  "torchaudio==2.4.1",
  "xformers==0.0.28",
  "opencv-python==4.12.0.88",
  "numpy==2.2.6",
  "pillow==11.3.0",
  "timm==1.0.22",
  "scipy==1.16.3",
  "scikit-learn==1.7.2",
  "tqdm==4.67.1",
  "pyyaml==6.0.3",
  "httpx==0.28.1",
  "huggingface-hub==1.1.4",
  "jinja2==3.1.6",
  "typer-slim==0.20.0",
  "matplotlib",
  "setuptools",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "torch118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "torch118" }
torchvision = { index = "torch118" }
torchaudio = { index = "torch118" }
xformers = { index = "torch118" }
